--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,11 +22,11 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       # Paso 3: Iniciar sesión en Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # Paso 3: Iniciar sesión en Docker Hub
+      - name: Log in to Docker Hub (Basic Test)
+        run: |
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
 
       # Paso 4: Construir y ejecutar los tests en la imagen Docker
       - name: Build and test Docker image
