--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,14 +22,11 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       # Paso 3: Iniciar sesión en Docker Hub
-      # Paso 3: Iniciar sesión en Docker Hub
-     # Paso de depuración (solo para revisar si los secretos están correctamente tomados)
-      - name: Show Docker username and password
-        run: |
-          echo "Docker username: ${{ secrets.DOCKER_USERNAME }}"
-          echo "Docker password: ${{ secrets.DOCKER_PASSWORD }} (hidden)"
-
-
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Paso 4: Construir y ejecutar los tests en la imagen Docker
       - name: Build and test Docker image
