--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,55 +1,69 @@
 name: CI/CD with Docker
 
 on:
-  push:
-    branches:
-      - main  # Rama en la que se ejecutará el flujo de trabajo
   pull_request:
     branches:
       - main  # Rama en la que se ejecutará el flujo de trabajo
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
 
     steps:
       # Paso 1: Clonar el repositorio
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      # Paso 2: Configurar Docker
+      # Paso 2: Configurar Docker Buildx
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
       # Paso 3: Iniciar sesión en Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Log into Docker Hub
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
+          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Paso 4: Construir y ejecutar los tests en la imagen Docker
+      # Paso 4: Extraer metadata del Dockerfile
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      # Paso 5: Construir y probar la imagen Docker
       - name: Build and test Docker image
-        uses: docker/build-push-action@v3
+        id: build-and-test
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
           file: ./Dockerfile
           push: false  # No sube la imagen aún
-          tags: my-app-react:test  # Usamos un tag para tests
+          tags: ${{ steps.meta.outputs.tags }}-test  # Usamos un tag para pruebas
 
-      # Paso 5: Si los tests pasan, construir la imagen final para producción
+      # Paso 6: Si los tests pasan, construir y subir la imagen de producción
       - name: Build and push Docker image for production
         if: success()  # Solo si los tests pasaron
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
           file: ./Dockerfile
           push: true  # Esto subirá la imagen a Docker Hub
-          tags: ${{ secrets.DOCKER_USERNAME }}/mi-app-react:latest
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
-      # Paso 6: (Opcional) Desplegar a un servidor (conexión SSH o similar)
-      - name: Deploy to server
-        run: |
-          ssh user@server_ip "docker pull ${{ secrets.DOCKER_USERNAME }}/mi-app-react:latest"
-          ssh user@server_ip "docker stop mi-app-react || true && docker rm mi-app-react || true"
-          ssh user@server_ip "docker run -d -p 80:3000 --name mi-app-react ${{ secrets.DOCKER_USERNAME }}/mi-app-react:latest"
+      # Paso 7: (Opcional) Firmar la imagen Docker publicada
+      - name: Sign the published Docker image
+        env:
+          TAGS: ${{ steps.meta.outputs.tags }}
+          DIGEST: ${{ steps.build-and-push.outputs.digest }}
+        run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
