--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Docker Frontend
 
 on:
   pull_request:
-    branches: [ "main" ] # Puedes agregar otras ramas como en el back
+    branches: [ "main" ]
 
 env:
   REGISTRY: ghcr.io
@@ -21,54 +21,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Paso 2: Configurar Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      # Paso 3: Limpiar caché y dependencias
-      - name: Clean npm cache and reinstall dependencies
-        run: |
-          npm cache clean --force
-          rm -rf node_modules package-lock.json
-          npm install --legacy-peer-deps --include=dev
-
-      # Paso 4: Ejecutar tests
-      - name: Run tests
-        run: npm run test -- --ci --runInBand --coverage
-
-      # Paso 5: Instalar cosign
-      - name: Install cosign
-        uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20 # v3.5.0
-        with:
-          cosign-release: 'v2.2.4'
-
-      # Paso 6: Configurar Docker Buildx
+      # Paso 2: Configurar Docker Buildx
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+        uses: docker/setup-buildx-action@v3
 
-      # Paso 7: Iniciar sesión en Docker Registry
+      # Paso 3: Iniciar sesión en Docker Registry
       - name: Log into Docker Registry ${{ env.REGISTRY }}
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Paso 8: Extraer metadatos de Docker
+      # Paso 4: Extraer metadatos de Docker
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # Paso 9: Construir y subir la imagen de Docker
+      # Paso 5: Construir y subir la imagen de Docker
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        uses: docker/build-push-action@v5
         with:
-          context: .  # Directorio actual (raíz del repositorio)
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -76,7 +53,7 @@ jobs:
           cache-to: type=gha,mode=max
           visibility: public
 
-      # Paso 10: Firmar la imagen Docker con cosign
+      # Paso 6: Firmar la imagen Docker con cosign
       - name: Sign the published Docker image
         env:
           TAGS: ${{ steps.meta.outputs.tags }}
