--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,8 +2,7 @@ name: Docker Frontend
 
 on:
   pull_request:
-    branches: [ "main" ]
-
+    branches: [ "main", "qa", "dev" ]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
